Added Italian translations

--- a/app/base/templates/site_template/navigation-auth.html
+++ b/app/base/templates/site_template/navigation-auth.html
@@ -30,13 +30,13 @@
 
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href={{ url_for('base_blueprint.login') }}>
-                <span class="nav-link-inner--text">Login</span>
+                <span class="nav-link-inner--text">{{ _('Login') }}</span>
               </a>
             </li>
 			
 			<li class="nav-item">
               <a class="nav-link nav-link-icon" href={{ url_for('base_blueprint.create_user') }}>
-                <span class="nav-link-inner--text">Register</span>
+                <span class="nav-link-inner--text">{{ _('Register') }}</span>
               </a>
             </li>
 
