--- a/app/home/templates/hotels_select.html
+++ b/app/home/templates/hotels_select.html
@@ -1,6 +1,6 @@
 {% extends "base_site.html" %}
 
-{% block title %} Select Hotel {% endblock title %}
+{% block title %} {{ _('Select Hotel') }} {% endblock title %}
 
 {% block stylesheets %}
   {{ super() }}
@@ -21,7 +21,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Hotels</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">{{ _('Hotels') }}</h5>
                       <span class="h2 font-weight-bold mb-0">{{ num_hotels }}</span>
                     </div>
                     <div class="col-auto">
@@ -45,16 +45,16 @@
           <div class="col">
             <div class="card shadow">
               <div class="card-header bg-transparent">
-                <h3 class="mb-0">Associated hotels</h3>
+                <h3 class="mb-0">{{ _('Associated hotels') }}</h3>
               </div>
               <div class="card-body">
 
 				<div class="text-muted text-center mt-1 mb-2">
               
 				{% if num_hotels == 0 %}
-					<span class="text-info">Your account is currently not linked to any hotels. Create one <a href="{{ url_for('home_blueprint.create_hotel') }}" class="button">here</a></span>
+					<span class="text-info">{{ _('Your account is currently not linked to any hotels. Create one ') }}<a href="{{ url_for('home_blueprint.create_hotel') }}" class="button">{{ _('here') }}</a></span>
 				{% elif current_user.is_admin %}
-					<a href="{{ url_for('home_blueprint.create_hotel') }}" class="button">Create hotel</a>
+					<a href="{{ url_for('home_blueprint.create_hotel') }}" class="button">{{ _('Create hotel') }}</a>
 				{% endif %}
 				
 				<!--
@@ -84,17 +84,17 @@
 							  <div class="text-center">
 								<form role="form" method="post" action="">
 									{% if current_user.is_admin %}
-										<a href="{{ url_for('home_blueprint.edit_hotel', hotel_id=hotel.seq_id) }}" class="button" style="display:block;">Manage</a>
+										<a href="{{ url_for('home_blueprint.edit_hotel', hotel_id=hotel.seq_id) }}" class="button" style="display:block;">{{ _('Manage') }}</a>
 									{% else %}
-										<a href="{{ url_for('home_blueprint.edit_hotel', hotel_id=hotel.seq_id) }}" class="button mb-2" style="display:block;">Manage</a>
+										<a href="{{ url_for('home_blueprint.edit_hotel', hotel_id=hotel.seq_id) }}" class="button mb-2" style="display:block;">{{ _('Manage') }}</a>
 									{% endif %}	
 									{% if current_user.is_admin %}
-										  <a href="#" class="button mb-2" style="display:block;" data-toggle="modal" data-target="#modal-notification_{{hotel.seq_id}}">Delete</a>
+										  <a href="#" class="button mb-2" style="display:block;" data-toggle="modal" data-target="#modal-notification_{{hotel.seq_id}}">{{ _('Delete') }}</a>
 										  <div class="modal fade" id="modal-notification_{{hotel.seq_id}}" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
 											 <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
 												<div class="modal-content bg-gradient-danger">
 												   <div class="modal-header">
-													  <h6 class="modal-title" id="modal-title-notification">Your attention is required</h6>
+													  <h6 class="modal-title" id="modal-title-notification">{{ _('Your attention is required') }}</h6>
 													  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 													  <span aria-hidden="true">×</span>
 													  </button>
@@ -102,13 +102,13 @@
 												   <div class="modal-body">
 													  <div class="py-3 text-center">
 														 <i class="ni ni-bell-55 ni-3x"></i>
-														 <h4 class="heading mt-4">You should read this!</h4>
-														 <p>Deleting a hotel is irreversible. The hotel information and gallery will be deleted. Are you sure you want to delete the hotel "{{hotel.name}}?"</p>
+														 <h4 class="heading mt-4">{{ _('You should read this!') }}</h4>
+														 <p>{{ _('Deleting a hotel is irreversible. The hotel information and gallery will be deleted. Are you sure you want to delete the hotel "%(name)s?"', name=hotel.name) }}</p>
 													  </div>
 												   </div>
 												   <div class="modal-footer">
-													  <button name="delete" value="{{ hotel.seq_id }}" class="btn btn-white" type="submit">Delete</button>
-													  <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Cancel</button>
+													  <button name="delete" value="{{ hotel.seq_id }}" class="btn btn-white" type="submit">{{ _('Delete') }}</button>
+													  <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">{{ _('Cancel') }}</button>
 												   </div>
 												</div>
 											 </div>
