--- a/app/base/templates/base_site_auth.html
+++ b/app/base/templates/base_site_auth.html
@@ -25,7 +25,7 @@
     {% endblock meta %}
 
   <title>
-    Hotel Admin Dashboard - {% block title %}{% endblock %}
+    {{ _('Hotel Admin Dashboard') }} - {% block title %}{% endblock %}
   </title>
 
   {% block stylesheets %}
