--- a/app/base/templates/login/login.html
+++ b/app/base/templates/login/login.html
@@ -1,6 +1,6 @@
 {% extends "base_site_auth.html" %}
 
-{% block title %} Login {% endblock title %}
+{% block title %} {{ _('Login') }} {% endblock title %}
 
 {% block content %}
 
@@ -17,8 +17,8 @@
                   <span class="text-danger">{{ msg | safe }}</span>
                 {% else %}
                 <span>
-                  Don't have an account?
-                  <a href={{ url_for('base_blueprint.create_user') }} >Sign up</a>
+                  {{ _("Don't have an account?") }}
+                  <a href={{ url_for('base_blueprint.create_user') }} >{{ _('Sign up') }}</a>
                 </span>
                 {% endif %}
 
@@ -38,7 +38,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-single-02"></i></span>
                     </div>
-                    {{ form.username(placeholder="Username",class="form-control") }}
+                    {{ form.username(placeholder=_('Username'),class="form-control") }}
                   </div>
 				  {{ render_errors(form.username) }}
                 </div>
@@ -47,25 +47,25 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    {{ form.password(placeholder="Password",class="form-control",type="password") }}
+                    {{ form.password(placeholder=_('Password'),class="form-control",type="password") }}
                   </div>
 				  {{ render_errors(form.password) }}
                 </div>
 				
 				<div class="form-group text-center">
 					{{ form.remember_me(value='n') }}
-					Remember me
+					{{ _('Remember me') }}
 				</div>
 
                 <div class="text-center">
-                  <button type="submit" name="login" class="btn btn-primary my-4">Sign in</button>
+                  <button type="submit" name="login" class="btn btn-primary my-4">{{ _('Sign in') }}</button>
                 </div>
               </form>
             </div>
           </div>
           <div class="row mt-3 text-center">
             <div class="col-12">
-              <a href={{ url_for('base_blueprint.create_user') }} class="text-light"><small>Create new account</small></a>
+              <a href={{ url_for('base_blueprint.create_user') }} class="text-light"><small>{{ _('Create new account') }}</small></a>
             </div>
           </div>
         </div>
