--- a/app/base/templates/login/register.html
+++ b/app/base/templates/login/register.html
@@ -16,7 +16,7 @@
                 {% if msg %}
                   <span class="text-danger">{{ msg | safe }}</span>
                 {% else %}
-                  Register
+                  {{ _('Register') }}
                 {% endif %}
 
               </div>
@@ -44,7 +44,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-single-02"></i></span>
                       </div>
-                      {{ form.username(placeholder="Username",class="form-control") }}
+                      {{ form.username(placeholder=_('Username'),class="form-control") }}
                     </div>
 					{{ render_errors(form.username) }}
                   </div>
@@ -53,7 +53,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                       </div>
-                      {{ form.email(placeholder="Email",class="form-control") }}
+                      {{ form.email(placeholder=_('Email'),class="form-control") }}
                     </div>
 					{{ render_errors(form.email) }}
                   </div>
@@ -62,13 +62,13 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                       </div>
-                      {{ form.password(placeholder="Password",class="form-control",type="password") }}
+                      {{ form.password(placeholder=_('Password'),class="form-control",type="password") }}
                     </div>
 					{{ render_errors(form.password) }}
                   </div>
 				 
                   <div class="text-center">
-                    <button type="submit" name="register" class="btn btn-primary my-4">Register</button>
+                    <button type="submit" name="register" class="btn btn-primary my-4">{{ _('Register') }}</button>
                   </div>
                 </form>
               {% endif %}
@@ -77,7 +77,7 @@
           </div>
           <div class="row mt-3 text-center">
             <div class="col-12">
-              <a href={{ url_for('base_blueprint.login') }} class="text-light"><small>Login</small></a>
+              <a href={{ url_for('base_blueprint.login') }} class="text-light"><small>{{ _('Login') }}</small></a>
             </div>
           </div>
         </div>
