--- a/app/base/templates/site_template/header-auth.html
+++ b/app/base/templates/site_template/header-auth.html
@@ -4,9 +4,9 @@
       <div class="container">
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <h1 class="text-white">
-                  Hotel Admin Dashboard
+                  {{ _('Hotel Admin Dashboard') }}
               </h1>
             </div>
           </div>
