--- a/app/base/templates/site_template/navigation.html
+++ b/app/base/templates/site_template/navigation.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">Dashboard</a>
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">{{ _('Dashboard') }}</a>
         <!-- Form -->
         <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
           <div class="form-group mb-0">
@@ -11,7 +11,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fas fa-search"></i></span>
               </div>
-              <input id="searchBar" class="form-control" placeholder="Search" onkeyup="searchLimiter()" type="text">
+              <input id="searchBar" class="form-control" placeholder="{{ _('Search') }}" onkeyup="searchLimiter()" type="text">
             </div>
           </div>
         </form>
@@ -28,20 +28,20 @@
             </a>
             <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
               <div class=" dropdown-header noti-title">
-                <h6 class="text-overflow m-0">Welcome!</h6>
+                <h6 class="text-overflow m-0">{{ _('Welcome!') }}</h6>
               </div>
               <a href="/profile" class="dropdown-item">
                 <i class="ni ni-single-02"></i>
-                <span>My profile</span>
+                <span>{{ _('My profile') }}</span>
               </a>
               <a href="/profile" class="dropdown-item">
                 <i class="ni ni-settings-gear-65"></i>
-                <span>Settings</span>
+                <span>{{ _('Settings') }}</span>
               </a>
               <div class="dropdown-divider"></div>
               <a href="/logout" class="dropdown-item">
                 <i class="ni ni-user-run text-red"></i>
-                <span>Logout</span>
+                <span>{{ _('Logout') }}</span>
               </a>
             </div>
           </li>
